--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li>主導產品化開發</li>
                     <li>現行系統操作流程改善</li>
                     <li>協助提高系統可接受度</li>
-                    <li>教育訓練(新技術導入、實習生指導)</li>
+                    <li>教育訓練(新技術導入、實習生合作)</li>
                 </ul>
             </p>
         </div>
