--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>
                 <span class="uk-text-bold">文件記錄: </span>
                 <span class="">markdown editor</span>
-				<span class="">可參考之前自己的練習<a href="https://github.com/mvpblade/crud/blob/master/README.md">NET.CORE初探</a></span>
+				<span class="">(之前的練習<a href="https://github.com/mvpblade/crud/blob/master/README.md">NET.CORE初探</a>)</span>
             </p>
             <p>
                 <span class="uk-text-bold">團隊合作方式: </span>
