--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/6<!DOCTYPE html>
 <html>
 
 <head>
@@ -31,7 +31,7 @@
     </div>
     <div class="uk-card uk-card-default uk-margin-top">
         <div class="uk-card-header">
-            <span class="uk-text-large">專案經理</span> /
+            <span class="uk-text-large">專案工程師</span> /
             <span class="uk-text-small">2018 ~ 至今</span>
         </div>
         <div class="uk-card-body">
@@ -96,6 +96,7 @@
                     <li>Line智慧客服 (Line Message API, Luis.ai)</li>
                     <li>Facebook直播輔助 (Facebook Message API, SignalR, NoSQL DB)</li>
                     <li>Google Cloud API運用 (Map, Youtube)</li>
+			<li>Microsoft 365整合(OAuth、Graph API、Share Point Online)</li>
                 </ul>
             </p>
         </div>
