--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-/6<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -31,28 +31,6 @@
     </div>
     <div class="uk-card uk-card-default uk-margin-top">
         <div class="uk-card-header">
-            <span class="uk-text-large">專案工程師</span> /
-            <span class="uk-text-small">2018 ~ 至今</span>
-        </div>
-        <div class="uk-card-body">
-            <p>
-                <span class="uk-text-bold">團隊合作方式: </span>
-                <span class="">WBS (Excel)</span>
-            </p>
-            <p>
-                <span class="uk-text-bold">工作內容: </span>
-                <ul class="uk-list uk-list-bullet">
-                    <li>提出可行性高之解決方案</li>
-                    <li>主導產品化開發</li>
-                    <li>現行系統操作流程改善</li>
-                    <li>協助提高系統可接受度</li>
-                    <li>教育訓練(新技術導入、實習生合作)</li>
-                </ul>
-            </p>
-        </div>
-    </div>
-    <div class="uk-card uk-card-default uk-margin-top">
-        <div class="uk-card-header">
             <span class="uk-text-large">網站開發人員</span> /
             <span class="uk-text-small">2013 ~ 至今</span>
         </div>
@@ -80,7 +58,7 @@
             <p>
                 <span class="uk-text-bold">文件記錄: </span>
                 <span class="">markdown editor</span>
-				<span class="">(之前的練習<a href="https://github.com/mvpblade/crud/blob/master/README.md">NET.CORE初探</a>)</span>
+		<span class="">(之前的練習<a href="https://github.com/mvpblade/crud/blob/master/README.md">NET.CORE初探</a>)</span>
             </p>
             <p>
                 <span class="uk-text-bold">團隊合作方式: </span>
@@ -96,7 +74,7 @@
                     <li>Line智慧客服 (Line Message API, Luis.ai)</li>
                     <li>Facebook直播輔助 (Facebook Message API, SignalR, NoSQL DB)</li>
                     <li>Google Cloud API運用 (Map, Youtube)</li>
-			<li>Microsoft 365整合(OAuth、Graph API、Share Point Online)</li>
+		    <li>Microsoft 365整合(OAuth、Graph API、Share Point Online)</li>
                 </ul>
             </p>
         </div>
