--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class="uk-card uk-card-default uk-card-body uk-margin-top">
         <ul class="uk-list">
             <li>#擅長在Google查詢下關鍵字</li>
-            <li>#透過Stack Overflow學習程式</li>
-            <li>#從Medium中學習思考</li>
+            <li>#透過Stack Overflow、Medium Blog學習程式</li>
             <li>#一起與工作夥伴找出total solution</li>
         </ul>
     </div>
